# irc_bot

./: .gitignore  .travis.yml  LICENSE  MANIFEST  README.md  irc_bot.py  numeric_replies.py  pyproject.toml  setup.py
.github/workflows/: publish_pypi.yml
irc_bot/: command_scheduler.py  irc_bot.py  irc_message.py  simple_irc_bot.py  utils.py
